made one pass over the text made minor changes

--- a/problem.tex
+++ b/problem.tex
@@ -14,7 +14,7 @@ Concretely, we want to develop an algorithm with the following input and output:
 \end{description}
 
 Our choice of the specification $\Phi$ on the product state space $X^\times$ subsumes many interesting class of control tasks.
-For example, we can express situations when the robots have their own local reach-avoid specifications, and they need to avoid collision among each other; we consider such specification in some of our examples in Sec.~\ref{}.
+For example, we can express situations when the robots have their own local reach-avoid specifications, and they need to avoid collision among each other; we consider such specification in some of our examples in Sec.~\ref{sec:local reach-avoid}.
 In addition, we can now also specify more general type of tasks which cannot be easily decomposed into individual subtasks for the robots.
-One example is the formation control problem, which we consider in the example in Sec.~\ref{}, where a set of robots need to reach some location while maintaining a given geometric formation:
+One example is the formation control problem, which we consider in the example in Sec.~\ref{sec:global formation control}, where a set of robots need to reach some location while maintaining a given geometric formation:
 Since the formation is defined using the relative positions of the robots, hence we cannot decompose this task into separate reach-avoid subtasks.
