--- a/experiments.tex
+++ b/experiments.tex
@@ -10,12 +10,12 @@ The formal controller synthesis has been performed
 on a cluster with 4 Intel Xeon E7-8857 v2 CPUs (48 cores in total) at 3GHz, with 1.5TB of
 RAM. %\MS{TODO: adding a table with complete information regarding sizes and times for all of the examples}
 
-We consider two distinct types of problems, and demonstrate how they can be solved using our approach. Table~\ref{tab:runtimes} demonstrates the runtimes of different stages for each of the experiment.
+We consider two distinct types of problems, and demonstrate how they can be solved using our approach. Table~\ref{tab:runtimes} demonstrates the runtimes of different stages for each of the experiment. Note that while reported numbers for local controller synthesis correspond to the total runtimes over all of the robots, significant reduction would be expected if abstraction and synthesis phases were parallalized.
 
 \begin{table*}
 	\centering
 	\caption{List of runtimes for different case-studies
-		\textmd{Runtimes (in seconds) for computing nominal controller over the product space using ALTRO ($T_{AL}$), (total) abstraction and synthesis times for computing local controllers for all of the robots using SCOTS ($T_{SC}^{abs}$ and $T_{SC}^{syn}$, respectively).}
+		\textmd{Runtimes (in seconds) for computing the nominal controllers over the corresponding product spaces using ALTRO ($T_{AL}$), (total) abstraction and synthesis times for synthesizing local controllers for all of the robots using SCOTS ($T_{SC}^{abs}$ and $T_{SC}^{syn}$, respectively).}
 	}
 	\label{tab:runtimes}
 	\renewcommand{\arraystretch}{1.2}
@@ -23,23 +23,23 @@ We consider two distinct types of problems, and demonstrate how they can be solv
 	\resizebox{1\columnwidth}{!}{
 		\begin{tabular}{l|c|rr}
 			\toprule
-			&\multicolumn{1}{c}{central synthesis}&
+			case-studies&\multicolumn{1}{c}{central synthesis}&
 			\multicolumn{2}{|c}{local synthesis}\\
 			
-			case-studies&$T_{AL}$&$T_{SC}^{abs}$&$T_{SC}^{syn}$\\
+			&$T_{AL}$&$T_{SC}^{abs}$&$T_{SC}^{syn}$\\
 			\midrule
 			
-			\multirow{1}{*}{\rotatebox{0}{multi-car}} & $125$ & $578$  & $68$ \\
+			\multirow{1}{*}{\rotatebox{0}{multi-drone path planning}} & $125$ & $578$  & $68$ \\
 			
 			\midrule
 			
-			\multirow{1}{*}{\rotatebox{0}{crane and forklift}} & $0.65$ & $512.1$  & $91.16$\\
+			\multirow{1}{*}{\rotatebox{0}{crane and forklift}} & $0.65$ & $511.22$  & $91.03$\\
 			
 			\midrule
 			
 			\multirow{1}{*}{\rotatebox{0}{lane merging}} & $100$ & $195$  & $38.5$\\
 			\midrule
-			\multirow{1}{*}{\rotatebox{0}{formation control}} & $163$ & $570$  & $140$\\
+			\multirow{1}{*}{\rotatebox{0}{multi-drone formation control}} & $163$ & $570$  & $140$\\
 			\bottomrule
 	\end{tabular}}
 \end{table*}
@@ -75,7 +75,7 @@ In this category of problems, we consider the following three examples.
 %\textcolor{red}{
 \subsubsection{Multi-drone path planning}\label{sec:Multirobot}
 In this example, we consider a planning scenario for ten identical drones ($N=10$). A set of initial and target states for each drone are specified and depicted in Fig.~\ref{fig:MA}. The drones must avoid hitting a physical obstacle that is depicted with green square in Fig.~\ref{fig:MA}. %A physical obstacle is added to the problem over the $2D$ plane, depicted in Figure~\ref{fig:MA} with a yellow circle. 
-The threshold for minimum distance from the static obstacle and other drones is chosen to be $\delta=\begin{bmatrix}0.3&0.3\end{bmatrix}^T$. %and $\delta_{obs}=\begin{bmatrix}2&2\end{bmatrix}^T$.
+The threshold for minimum distance from the static obstacle and other drones is chosen to be $\delta=\begin{bmatrix}0.28&0.28\end{bmatrix}^T$. %and $\delta_{obs}=\begin{bmatrix}2&2\end{bmatrix}^T$.
 The control objective is to synthesize a controller for each drone so that in the presence of additive bounded disturbance, beginning from the specified initial state, the corresponding target state is reached within a finite horizon, while avoiding collision with other drones and the static obstacle at every time point. 
 
 Every drone is modeled as tuple $\Sigma^i=(X,U,x_\init^i,W,f^d,Y,h^d)$. %The set of state variables $X$ consists of $x_1$, $x_2$ and $x_3$ which denote position in $2D$ plane and movement angle, respectively. The set of input variables includes $u_1$ and $u_2$ which represent linear and angular speeds of each robot. 
@@ -103,7 +103,8 @@ h^d(x(t))=\begin{bmatrix}
 
 
 %According to our proposed scheme, we first use ALTRO to design a centralized nominal controller for the product state and input space that satisfies the specification in Equation~\eqref{eq:spec} in the absence of disturbance ($W=\{0\}$). 
-We choose the horizon length $K=102$ and sampling time $\tau=0.1$. ALTRO computes a valid open-loop trajectory $x_{nom}$ in $125$ seconds for the product space with $30$ state and $20$ input variables.  %Next, we show how to synthesize local feedback controllers that guarantee satisfaction of specifications in the presence of disturbance. %hereeeThe open-loop trajectories generated by ALTRO ($\set{(x_{0_\nom}^i,\ldots,x_{K_\nom}^i)}_{i\in [1;N]}$) are depicted in solid in Figure~\ref{fig:MA}. Note that the guarantee that open-loop controller gives is only valid in the absence of disturbance. In Figure~\ref{fig:MA}, dotted trajectories correspond to the first and the second robot's paths in $2D$ plane when constant additive disturbance $w=\{\begin{bmatrix}0.03,0.03,0.03\end{bmatrix}\}$ is being applied throughout the whole horizon. It can be noticed that they collide with each other before reaching their corresponding target sets. Next, we show how to synthesize local controllers that guarantee satisfaction of specifications in the presence of disturbance. \MS{1) Use dashed/dotted for trajectories with added disturbance. 2) use $x_1$ and $x_2$ instead of $x$ and $y$ for different axes 3) don't draw the outer circle.}
+We choose the horizon length $T=102$ and sampling time $\tau=0.1$. ALTRO computes a valid open-loop trajectory %$x_{nom}$
+in $125$ seconds for the product space with $30$ state and $20$ input variables.  %Next, we show how to synthesize local feedback controllers that guarantee satisfaction of specifications in the presence of disturbance. %hereeeThe open-loop trajectories generated by ALTRO ($\set{(x_{0_\nom}^i,\ldots,x_{K_\nom}^i)}_{i\in [1;N]}$) are depicted in solid in Figure~\ref{fig:MA}. Note that the guarantee that open-loop controller gives is only valid in the absence of disturbance. In Figure~\ref{fig:MA}, dotted trajectories correspond to the first and the second robot's paths in $2D$ plane when constant additive disturbance $w=\{\begin{bmatrix}0.03,0.03,0.03\end{bmatrix}\}$ is being applied throughout the whole horizon. It can be noticed that they collide with each other before reaching their corresponding target sets. Next, we show how to synthesize local controllers that guarantee satisfaction of specifications in the presence of disturbance. \MS{1) Use dashed/dotted for trajectories with added disturbance. 2) use $x_1$ and $x_2$ instead of $x$ and $y$ for different axes 3) don't draw the outer circle.}
 
 %We augment each open-loop trajectory with time 
 %We construct a tube around the (nominal) trajectory produced by ALTRO with the width vector
@@ -113,9 +114,10 @@ We choose the horizon length $K=102$ and sampling time $\tau=0.1$. ALTRO compute
  
  We want to robustify the nominal controller against disturbances with $|W|\leq \begin{bmatrix}0.01&0.01&0.01\end{bmatrix}^T$. We consider state and input spaces to be $X=[0,10]^2\times[-2,3.3]$ and
 $U=[-2.4,2.4]^2$, respectively. Choosing state and input partition sizes $\eta_{X}=\begin{bmatrix}0.02&0.02&0.02\end{bmatrix}^T$ and
-$\eta_{U}=\begin{bmatrix}0.3&0.3\end{bmatrix}^T$ results in $\hat X$ and $\hat U$ with $9.61\times 10^7$ and $289$ points. As we explained in Sec.~\ref{sec:tracking}, we compute the transition system over inter-tube space characterized by $\varepsilon=\begin{bmatrix}0.16&0.16&0.32\end{bmatrix}^T$, which results in finite-state transition system with $|\hat P|=3.5\times 10^5$ points. Given the above settings, SCOTS computes abstraction in $578$ seconds ($57.8$ seconds in average) and synthesis in $68$ seconds ($6.8$ seconds in average).
+$\eta_{U}=\begin{bmatrix}0.3&0.3\end{bmatrix}^T$ results in $\hat X$ and $\hat U$ with $9.61\times 10^7$ and $289$ points. As we explained in Sec.~\ref{sec:local_abcd}, we compute the transition system over the inter-tube space characterized by $\varepsilon=\begin{bmatrix}0.16&0.16&0.32\end{bmatrix}^T$, which results in finite-state transition system with $|\hat P|=3.5\times 10^5$ points. Given the above settings, SCOTS computes abstraction in $578$ seconds ($57.8$ seconds in average) and synthesis in $68$ seconds ($6.8$ seconds in average).
 
-By allowing disturbance to take non-zero values, there is no guarantee that the open-loop trajectory is followed and minimum distances are kept above the design thresholds. Fig.~\ref{fig:multi_drone_distance} illustrates performance of open-loop and feedback controllers on regulating distance between the first and second drones ($d^{p}(h^1(\proj^1(x_{nom})),h^2(\proj^2(x_{nom})))$) with and without disturbance. As expected, in the absence of disturbance open-loop controller suffices and distance between the two drones (shown in solid blue) does not go below the threshold line $\delta=0.28$. Next, we consider the case when constant additive disturbance $w=\begin{bmatrix}0.03&0.03&0.03\end{bmatrix}^T$ is being applied to both of the drones throughout the whole horizon. It can be noticed that applying the open-loop controller causes that distance between the two drones (shown in solid red) becomes smaller than $\delta$. However, the feedback controller is still capable of maintaining distance above the given threshold (shown in solid green).
+By allowing disturbance to take non-zero values, there is no guarantee that the open-loop trajectory is followed and minimum distances are kept above the design thresholds. Fig.~\ref{fig:multi_drone_distance} illustrates performance of open-loop and feedback controllers on regulating distance between the first and second drones %($d^{p}(h^1(\proj^1(x_{nom})),h^2(\proj^2(x_{nom})))$)
+with and without disturbance. As expected, in the absence of disturbance open-loop controller suffices and distance between the two drones (shown in solid blue) does not go below the threshold line $\delta=0.28$. Next, we consider the case when constant additive disturbance $w=\begin{bmatrix}0.03&0.03&0.03\end{bmatrix}^T$ is being applied to both of the drones throughout the whole horizon. It can be noticed that applying the open-loop controller causes that distance between the two drones (shown in solid red) becomes smaller than $\delta$. However, the feedback controller is still capable of maintaining distance above the given threshold (shown in solid green).
 \begin{figure}[t]
 	\centering
 	\includegraphics[width=0.45\textwidth]{figures/MA1.pdf}
@@ -124,7 +126,7 @@ By allowing disturbance to take non-zero values, there is no guarantee that the 
 
 \begin{figure}[t]
 	\centering
-	\includegraphics[width=0.45\textwidth]{figures/distances.pdf}
+	\includegraphics[width=0.45\textwidth]{figures/dist.pdf}
 	\caption{Performance of open-loop and feedback controllers in regulating distance between drones for disturbance-free and perturbed situations}
 \end{figure}\label{fig:multi_drone_distance}
 
@@ -232,12 +234,12 @@ h^l=\begin{bmatrix}
 where, $y_2>0$ is a constant that denotes the height of the forklift's head with respect to the ground.
 
 %As promised, we use ALTRO in the first step to generate a valid trajectory for the case that $W=\{0\}$. 
-There is no static obstacle defined for this example and for minimum distance between the crane and the forklift we choose $\delta=\begin{bmatrix}0.035&0.035\end{bmatrix}^T$. The sampling time and the horizon length are fixed to $\tau=0.1$ and $K=70$, respectively. Given these settings, ALTRO was capable of generating a valid nominal trajectory in $0.65$ seconds. Fig.~\ref{fig:cr_and_lft} (\textbf{left}) demonstrates snapshots of the produced trajectory. Surprisingly enough, applying (constant) additive disturbance $W=\begin{bmatrix}0&0.02&0&0\end{bmatrix}^T$ (to the cart-pole system) causes collision between the crane and forklift before the end of the mission Fig.~\ref{fig:cr_and_lft} (\textbf{right}).
+There is no static obstacle defined for this example and for minimum distance between the crane and the forklift we choose $\delta=\begin{bmatrix}0.035&0.035\end{bmatrix}^T$. The sampling time and the horizon length are fixed to $\tau=0.1$ and $T=70$, respectively. Given these settings, ALTRO was capable of generating a valid nominal trajectory in $0.65$ seconds. Fig.~\ref{fig:cr_and_lft_2} (\textbf{left}) demonstrates snapshots of the produced trajectory. Surprisingly enough, applying (constant) additive disturbance $W=\begin{bmatrix}0&0.02&0&0\end{bmatrix}^T$ (to the cart-pole system) causes collision between the crane and forklift before the end of the mission (Fig.~\ref{fig:cr_and_lft_2} (\textbf{right})).
 
-In the next step, we use SCOTS in order to compute a feedback controller tolerating additive disturbance $|W^1|\leq\begin{bmatrix}0&0.02&0&0\end{bmatrix}^T$ for the crane and $|W^2|\leq\begin{bmatrix}0&0.1\end{bmatrix}^T$ for the forklift. %We note that the selection of tube sizes need to satisfy the following inequality:
+In the next step, we use SCOTS in order to compute a feedback controller tolerating additive disturbance $|W^1|\leq\begin{bmatrix}0&0.03&0&0\end{bmatrix}^T$ for the crane and $|W^2|\leq\begin{bmatrix}0&0.1\end{bmatrix}^T$ for the forklift. %We note that the selection of tube sizes need to satisfy the following inequality:
 %\[ \delta_{col}> \varepsilon_{1}^{(1)} + l\times\varepsilon_{3}^{(1)} + \varepsilon_{1}^{(2)},\]
 %where $\varepsilon_{1}^{(1)}$, $\varepsilon_{3}^{(1)}$ denote tube sizes over $x_1^{(1)}$ and $x_3^{(1)}$, $l$ denotes the length of the rope between the cart and the hook and $\varepsilon_{1}^{(2)}$ denotes the tube size over $x_1^{(2)}$. 
-We choose state and input spaces for the crane to be $X^{1}=[0,5.06]\times[-0.59,2.18]\times[1.66,4.14]\times[-4.7,4.45]$ and $U^{1}=[-7,7]$, respectively. For the forklift, we set \MS{$X^{2}=??$} and $U^{2}=[-3,3]$. %Next, we augment both dynamics with time and 
+We choose state and input spaces for the crane to be $X^{1}=[0,5.06]\times[-0.59,2.18]\times[1.66,4.14]\times[-4.7,4.45]$ and $U^{1}=[-7,7]$, respectively. For the forklift, we set $X^{2}=[-3,3]\times[2,9]$ and $U^{2}=[-3,3]$. %Next, we augment both dynamics with time and 
 Next, we choose state and input partition sizes $\eta_{{X}}^{1}=\begin{bmatrix}0.015&0.035&0.016&0.064\end{bmatrix}^T$, $\eta_{U}^1=0.2$,  $\eta_{{X}}^2=\begin{bmatrix}0.015&0.03\end{bmatrix}^T$ and $\eta_{U}^2=0.1$. These selections yield discretized models with $|\hat X^{(1)}|=2.5\times 10^9$, $|\hat U^{(1)}|=71$, $|\hat X^{(2)}|=6.7\times 10^4$ and $|\hat U^{(2)}|=141$ points for the the crane and forklift, respectively. Next, we limit both of the state spaces into tubes constructed around the open-loop trajectories with sizes specified as $\varepsilon^{1}=\begin{bmatrix}0.135&0.385&0.176 &0.768\end{bmatrix}^T$ and $\varepsilon^{2}=\begin{bmatrix}0.08&0.12\end{bmatrix}$. This reduces size of state spaces into $|\hat P^{1}|=1.2\times 10^7$ and $|\hat P^{2}|=3.1\times 10^4$. Given the above settings, SCOTS was able to compute abstraction in $511$ and $0.22$ seconds for the crane and the forklift, respectively. Scots performs synthesis in $91$ and $0.037$ seconds for the crane and the forklift, respectively.
 			
 \begin{figure}[t]
@@ -299,7 +301,7 @@ where $x_1$, $x_2$ denote the vehicle's position in $2D$ plane, $u_1$ and $u_2$ 
 \[
 h^v(x(t))=x(t).
 \]
-For collision and obstacle avoidance, we choose $\delta=\begin{bmatrix}0.37&0.37\end{bmatrix}^T$. The sampling time and the horizon length are fixed to $\tau=0.1$ and $K=110$, respectively. Given these settings, ALTRO generates a valid nominal trajectory in $100$ seconds. Fig.~\ref{fig:merge} demonstrates snapshots of the produced trajectory. Next, we use SCOTS in order to compute a feedback controller tolerating additive disturbance $|W|\leq\begin{bmatrix}0.03&0.03&0.03\end{bmatrix}^T$. We choose state and input spaces for each vehicle's model to be $X=[0,15]\times[0,7.4]\times[-1,0.4]$ and $U=[-1,3]\times[-2.2,2.2]$, respectively. State and input partition sizes are chosen as $\eta_{X}=\begin{bmatrix}0.02&0.02&0.02\end{bmatrix}^T$, $\eta_{U}=\begin{bmatrix}0.3&0.15\end{bmatrix}^T$. These selections yield discretized models with $|\hat X|=2.1\times 10^7$, $|\hat U|=406$ points. Next, we limit the state spaces into tubes constructed around the open-loop trajectories with sizes specified as $\varepsilon=\begin{bmatrix}0.16&0.16&0.32\end{bmatrix}^T$. This reduces size of state space into $|\hat P|=1.9\times 10^5$ (in average). Given the above settings, SCOTS was able to compute abstraction in $195$ seconds ($32.5$ seconds in average) and synthesize controllers in $38.5$ seconds ($6.4$ seconds in average).
+For collision and obstacle avoidance, we choose $\delta=\begin{bmatrix}0.37&0.37\end{bmatrix}^T$. The sampling time and the horizon length are fixed to $\tau=0.1$ and $T=110$, respectively. Given these settings, ALTRO generates a valid nominal trajectory in $100$ seconds. Fig.~\ref{fig:merge} demonstrates snapshots of the produced trajectory. Next, we use SCOTS in order to compute a feedback controller tolerating additive disturbance $|W|\leq\begin{bmatrix}0.03&0.03&0.03\end{bmatrix}^T$. We choose state and input spaces for each vehicle's model to be $X=[0,15]\times[0,7.4]\times[-1,0.4]$ and $U=[-1,3]\times[-2.2,2.2]$, respectively. State and input partition sizes are chosen as $\eta_{X}=\begin{bmatrix}0.02&0.02&0.02\end{bmatrix}^T$, $\eta_{U}=\begin{bmatrix}0.3&0.15\end{bmatrix}^T$. These selections yield discretized models with $|\hat X|=2.1\times 10^7$, $|\hat U|=406$ points. Next, we limit the state spaces into tubes constructed around the open-loop trajectories with sizes specified as $\varepsilon=\begin{bmatrix}0.16&0.16&0.32\end{bmatrix}^T$. This reduces size of state space into $|\hat P|=1.9\times 10^5$ (in average). Given the above settings, SCOTS was able to compute abstraction in $195$ seconds ($32.5$ seconds in average) and synthesize controllers in $38.5$ seconds ($6.4$ seconds in average).
 
 
 
@@ -317,7 +319,7 @@ For collision and obstacle avoidance, we choose $\delta=\begin{bmatrix}0.37&0.37
 \end{figure}\label{fig:merge}
 
 
-\subsection{Global formation control problem}
+\subsection{Global formation control problem}\label{sec:global formation control}
 
 The second category of example, that we are about to present, is about maintaining a global formation while satisfying a set of reach-avoid specifications.
 We show how the formation control problem can be expressed using a static obstacle $\avoid$ on the product state space $X^\times$, as required by the problem setup in Sec.~\ref{sec:problem}.
@@ -352,11 +354,11 @@ where the last conjunction (highlighted in blue) in the definition of $\obs$ is 
 Once the sets $\goal$ and $\obs$ are obtained as above, we can use Alg.~\ref{alg:main} to find the set of feedback controllers $\set{C^i}$.
 
 %\todo{The example goes here...}
-\subsubsection{Formation control}
+\subsubsection{Multi-drone formation control}
 \label{subsec:formation_control}
 Consider a formation control scenario where a set of five drones (identically modelled) need to go from a specified start point to a certain destination (both defined over the corresponding state space) within a finite horizon, while four of them forming a (approximate) diamond around a fifth drone (positioned at the diamond's center) at every time point. There are two square-shaped obstacles (defined over the output space) from which the group needs to keep a certain minimum distance at all of the time points. %As mentioned before, to check the formation the relative positions between the $i^{th}$ and $j^{th}$ drones is measured by euclidean norm ($d_e^p(.,.)$) whereas collision/obstacle avoidance is checked by the infinity norm$d^p(.,.)$.
 
-The model for each of the drone is the same as the drone model given in Subsection~\ref{sec:local reach-avoid} ($\Sigma^i=(X,x_\init^i,U,W,f^d,Y,h^d)$). Distance between each pair of drones positioned at the diamond's vertices is set to be $\lambda^{i,j}=1.5$ for $i,j\in\set{1,2,3,4}$, while the drone positioned at the center is supposed to keep distance $\lambda^{5,j}=\frac{3\sqrt{2}}{4}$ for $j\in\set{1,2,3,4}$. Setting the minimum distance for obstacle avoidance to $\delta=\begin{bmatrix}0.34&0.34\end{bmatrix}^T$, sampling time $\tau=0.1$ and horizon length $K=100$ ALTRO finds a valid solution over the product system with $15$ state and $10$ input variables within $163$ seconds. Fig.~\ref{fig:formation_ex} illustrates four sequential snapshots of the trajectory generated by ALTRO for the nominal system. Noticeably, both of the relative position and orientation between drones is kept (almost) constant throughout the journey. 
+The model for each of the drone is the same as the drone model given in Subsection~\ref{sec:local reach-avoid} ($\Sigma^i=(X,x_\init^i,U,W,f^d,Y,h^d)$). Distance between each pair of drones positioned at the diamond's vertices is set to be $\lambda^{i,j}=1.5$ for $i,j\in\set{1,2,3,4}$, while the drone positioned at the center is supposed to keep distance $\lambda^{5,j}=\frac{3\sqrt{2}}{4}$ for $j\in\set{1,2,3,4}$. Setting the minimum distance for obstacle avoidance to $\delta=\begin{bmatrix}0.34&0.34\end{bmatrix}^T$, sampling time $\tau=0.1$ and horizon length $T=100$ ALTRO finds a valid solution over the product system with $15$ state and $10$ input variables within $163$ seconds. Fig.~\ref{fig:formation_ex} illustrates four sequential snapshots of the trajectory generated by ALTRO for the nominal system. Noticeably, both of the relative position and orientation between drones is kept (almost) constant throughout the journey. 
 
 %Synthesizing local controllers for every drone such that the specifications hold for the perturbed models, is performed similar to the previous examples. 
 We follow the steps outlined in Alg.~\ref{alg:abcd-with-time-for-tracking} to synthesize local controllers for every drone such that the specifications hold for the perturbed models with $|W|\leq \begin{bmatrix}0.02&0.02&0.02\end{bmatrix}^T$ and $\mu=0.5$. %We construct a tube around the (nominal) trajectory produced by ALTRO with the width vector $\varepsilon=\begin{bmatrix}??&??&??\end{bmatrix}^T$.
