--- a/experiments.tex
+++ b/experiments.tex
@@ -10,7 +10,7 @@ The formal controller synthesis has been performed
 on a cluster with 4 Intel Xeon E7-8857 v2 CPUs (48 cores in total) at 3GHz, with 1.5TB of
 RAM. %\MS{TODO: adding a table with complete information regarding sizes and times for all of the examples}
 
-We consider two distinct types of problems, and demonstrate how they can be solved using our approach. Table~\ref{tab:runtimes} demonstrates the runtimes of different stages for each of the experiment. Note that while reported numbers for local controller synthesis correspond to the total runtimes over all of the robots, significant reduction would be expected if abstraction and synthesis phases were parallalized.
+We consider two distinct types of problems, and demonstrate how they can be solved using our approach. Table~\ref{tab:runtimes} demonstrates the runtimes of different stages for each of the experiment. Note that while reported numbers for local controller synthesis correspond to the total runtimes over all of the robots, significant reduction would be expected if abstraction and synthesis phases were parallelized.
 
 \begin{table*}
 	\centering
