--- a/experiments.tex
+++ b/experiments.tex
@@ -370,7 +370,7 @@ Computing the transition system over inter-tube space with width $\varepsilon=\b
 \begin{figure}[t]
 	\centering
 	\includegraphics[width=0.45\textwidth]{figures/formation.pdf}
-	\caption{Illustration of the (sample) robustified trajectories for the robot formation control example}
+	\caption{Illustration of the (sample) robustified trajectory for the robot formation control example}
 \end{figure}\label{fig:formation_ex}
  
 %Note that $\delta_{col} > \varepsilon$.
