--- a/experiments.tex
+++ b/experiments.tex
@@ -313,7 +313,7 @@ For collision and obstacle avoidance, we choose $\delta=\begin{bmatrix}0.37&0.37
 
 
 \begin{figure}
-	\caption{Illustration of (sample) robustified trajectory for the lane merging example}
+	\caption{Illustration of a (sample) robustified trajectory for the lane merging example}
 	\centering
 	\includegraphics[width=0.45\textwidth,height=0.5\textheight]{figures/merge2.png}
 \end{figure}\label{fig:merge}
@@ -370,7 +370,7 @@ Computing the transition system over inter-tube space with width $\varepsilon=\b
 \begin{figure}[t]
 	\centering
 	\includegraphics[width=0.45\textwidth]{figures/formation.pdf}
-	\caption{Illustration of the (sample) robustified trajectory for the robot formation control example}
+	\caption{Illustration of a (sample) robustified trajectory for the robot formation control example}
 \end{figure}\label{fig:formation_ex}
  
 %Note that $\delta_{col} > \varepsilon$.
