multi_drone example numbers updated

--- a/experiments.tex
+++ b/experiments.tex
@@ -29,7 +29,7 @@ We consider two distinct types of problems, and demonstrate how they can be solv
 			&$T_{AL}$&$T_{SC}^{abs}$&$T_{SC}^{syn}$\\
 			\midrule
 			
-			\multirow{1}{*}{\rotatebox{0}{Multi-drone path planning}} & $125$ & $87.71$  & $7.97$ \\
+			\multirow{1}{*}{\rotatebox{0}{Multi-drone path planning}} & $125$ & $91.0$  & $9.22$ \\
 			
 			\midrule
 			
@@ -112,12 +112,12 @@ in $125$ seconds for the product space with $30$ state and $20$ input variables.
 %Note that $\delta_{col} > \varepsilon$.
  %We use SCOTS in order to synthesize (local) feedback controllers that guarantee reachability and obstacle/collision avoidance in the presence of bounded disturbance such that 
  
- We want to robustify the nominal controller against disturbances with $|W|\leq \begin{bmatrix}0.01&0.01&0.01\end{bmatrix}^T$. We consider state and input spaces to be $X=[0,10]^2\times[-2,3.3]$ and
+ We want to robustify the nominal controller against disturbances with $|W|\leq \begin{bmatrix}0&0.025&0.025\end{bmatrix}^T$. We consider state and input spaces to be $X=[-1,11]^2\times[-2,3.3]$ and
 $U=[-2.4,2.4]^2$, respectively. Choosing state and input partition sizes $\eta_{X}=\begin{bmatrix}0.02&0.02&0.02\end{bmatrix}^T$ and
-$\eta_{U}=\begin{bmatrix}0.3&0.3\end{bmatrix}^T$ results in $\hat X$ and $\hat U$ with $9.61\times 10^7$ and $289$ points. As we explained in Sec.~\ref{sec:local_abcd}, we compute the transition system over the inter-tube space characterized by $\varepsilon=\begin{bmatrix}0.16&0.16&0.32\end{bmatrix}^T$, which results in finite-state transition system with $|\hat P|=3.5\times 10^5$ points. Given the above settings, SCOTS computes abstraction in $578$ seconds ($57.8$ seconds in average) and synthesis in $68$ seconds ($6.8$ seconds in average).
+$\eta_{U}=\begin{bmatrix}0.3&0.3\end{bmatrix}^T$ results in $\hat X$ and $\hat U$ with $9.61\times 10^7$ and $289$ points. As we explained in Sec.~\ref{sec:local_abcd}, we compute the transition system over the inter-tube space characterized by $\varepsilon=\begin{bmatrix}0.16&0.16&0.18\end{bmatrix}^T$, which results in finite-state transition system with $|\hat P|=4.0\times 10^5$ points. Given the above settings, SCOTS computes abstraction in $910$ seconds ($91.0$ seconds in average) and synthesis in $92.2$ seconds ($9.22$ seconds in average).
 
 By allowing disturbance to take non-zero values, there is no guarantee that the open-loop trajectory is followed and minimum distances are kept above the design thresholds. Fig.~\ref{fig:multi_drone_distance} illustrates performance of open-loop and feedback controllers on regulating distance between the first and second drones %($d^{p}(h^1(\proj^1(x_{nom})),h^2(\proj^2(x_{nom})))$)
-with and without disturbance. As expected, in the absence of disturbance open-loop controller suffices and distance between the two drones (shown in solid blue) does not go below the threshold line $\delta=0.28$. Next, we consider the case when constant additive disturbance $w=\begin{bmatrix}0.03&0.03&0.03\end{bmatrix}^T$ is being applied to both of the drones throughout the whole horizon. It can be noticed that applying the open-loop controller causes that distance between the two drones (shown in solid red) becomes smaller than $\delta$. However, the feedback controller is still capable of maintaining distance above the given threshold (shown in solid green).
+with and without disturbance. As expected, in the absence of disturbance open-loop controller suffices and distance between the two drones (shown in solid blue) does not go below the threshold line $\delta=0.28$. Next, we consider the case when constant additive disturbance $w=\begin{bmatrix}0 &0.025&0.025\end{bmatrix}^T$ is being applied to both of the drones throughout the whole horizon. It can be noticed that applying the open-loop controller causes that distance between the two drones (shown in solid red) becomes smaller than $\delta$. However, the feedback controller is still capable of maintaining distance above the given threshold (shown in solid green).
 \begin{figure}[t]
 	\centering
 	\includegraphics[width=0.45\textwidth]{figures/MA1.pdf}
@@ -358,7 +358,7 @@ Once the sets $\goal$ and $\obs$ are obtained as above, we can use Alg.~\ref{alg
 \label{subsec:formation_control}
 Consider a formation control scenario where a set of five drones (identically modelled) need to go from a specified start point to a certain destination (both defined over the corresponding state space) within a finite horizon, while four of them forming a (approximate) diamond around a fifth drone (positioned at the diamond's center) at every time point. There are two square-shaped obstacles (defined over the output space) from which the group needs to keep a certain minimum distance at all of the time points. %As mentioned before, to check the formation the relative positions between the $i^{th}$ and $j^{th}$ drones is measured by euclidean norm ($d_e^p(.,.)$) whereas collision/obstacle avoidance is checked by the infinity norm$d^p(.,.)$.
 
-The model for each of the drone is the same as the drone model given in Subsection~\ref{sec:local reach-avoid} ($\Sigma^i=(X,x_\init^i,U,W,f^d,Y,h^d)$). Distance between each pair of drones positioned at the diamond's vertices is set to be $\lambda^{i,j}=1.5$ for $i,j\in\set{1,2,3,4}$, while the drone positioned at the center is supposed to keep distance $\lambda^{5,j}=\frac{3\sqrt{2}}{4}$ for $j\in\set{1,2,3,4}$. Setting the minimum distance for obstacle avoidance to $\delta=\begin{bmatrix}0.4&0.4\end{bmatrix}^T$, sampling time $\tau=0.1$ and horizon length $T=100$ ALTRO finds a valid solution over the product system with $15$ state and $10$ input variables within $163$ seconds. Fig.~\ref{fig:formation_ex} illustrates four sequential snapshots of the trajectory generated by ALTRO for the nominal system. Noticeably, both of the relative position and orientation between drones is kept (almost) constant throughout the journey. 
+The model for each of the drone is the same as the drone model given in Subsection~\ref{sec:local reach-avoid} ($\Sigma^i=(X,x_\init^i,U,W,f^d,Y,h^d)$). Distance between each pair of drones positioned at the diamond's vertices is set to be $\lambda^{i,j}=\frac{3\sqrt{2}}{2}$ for $i,j\in\set{1,2,3,4}$, while the drone positioned at the center is supposed to keep distance $\lambda^{5,j}=1.5$ for $j\in\set{1,2,3,4}$. Setting the minimum distance for obstacle avoidance to $\delta=\begin{bmatrix}0.4&0.4\end{bmatrix}^T$, sampling time $\tau=0.1$ and horizon length $T=100$ ALTRO finds a valid solution over the product system with $15$ state and $10$ input variables within $163$ seconds. Fig.~\ref{fig:formation_ex} illustrates four sequential snapshots of the trajectory generated by ALTRO for the nominal system. Noticeably, both of the relative position and orientation between drones is kept (almost) constant throughout the journey. 
 
 %Synthesizing local controllers for every drone such that the specifications hold for the perturbed models, is performed similar to the previous examples. 
 We follow the steps outlined in Alg.~\ref{alg:abcd-with-time-for-tracking} to synthesize local controllers for every drone such that the specifications hold for the perturbed models with $|W|\leq \begin{bmatrix}0.03&0.03&0.03\end{bmatrix}^T$ and $\mu=0.5$. %We construct a tube around the (nominal) trajectory produced by ALTRO with the width vector $\varepsilon=\begin{bmatrix}??&??&??\end{bmatrix}^T$.
